# lxtermc-autoconf

./: ChangeLog  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  files.list
data/: Makefile.am  Makefile.in  lxtermc-preferences.glade  lxtermc-preferences.ui  lxtermc.desktop  lxtermc.desktop.in
m4/: ChangeLog
man/: Makefile.am  Makefile.in
po/: ChangeLog  Makevars  POTFILES.in  be.po  bg.po  bn.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fa.po  hu.po  id.po  it.po  lg.po  ms.po  nl.po  nn.po  pa.po  ps.po  sk.po  sl.po  sr.po  sr@latin.po  te.po  th.po  tt_RU.po  ug.po  uk.po  ur.po  ur_PK.po  vi.po  zh_CN.po  zh_TW.po
src/: Makefile.am  Makefile.in  lxtermc.c  lxtermc.h  lxterminal.c  lxterminal.h  preferences.c  preferences.h  setting.c  setting.h  unixsocket.c  unixsocket.h
stored-unused/po/: POTFILES.skip  af.po  ar.po  bn_IN.po  ca.po  cs.po  eo.po  et.po  fi.po  fo.po  fr.po  frp.po  gl.po  he.po  hr.po  is.po  ja.po  kk.po  ko.po  lt.po  ml.po  nb.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sv.po  tr.po
